--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -11,8 +11,8 @@ jdbc.partitionCount=1
 jdbcType=mysql
 #jdbc.driver=com.p6spy.engine.spy.P6SpyDriver
 jdbc.driver=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://127.0.0.1:3306/pm20181018?useUnicode=true&characterEncoding=UTF-8&noAccessToProcedureBodies=true
-jdbc.url=jdbc:mysql://127.0.0.1:3318/pm?useUnicode=true&characterEncoding=UTF-8&noAccessToProcedureBodies=true
+jdbc.url=jdbc:mysql://127.0.0.1:3306/pm20181018?useUnicode=true&characterEncoding=UTF-8&noAccessToProcedureBodies=true
+#jdbc.url=jdbc:mysql://127.0.0.1:3318/pm?useUnicode=true&characterEncoding=UTF-8&noAccessToProcedureBodies=true
 jdbc.username=root
 jdbc.password=root
 #jdbc.password=cm9vdA==
