处理用户可以管理多个部门

--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -13,7 +13,7 @@ jdbcType=mysql
 jdbc.driver=com.mysql.jdbc.Driver
 #\u670D\u52A1\u5668\u4E0A\u7684\u7AEF\u53E3\u4E3A3318
 #jdbc.url=jdbc:mysql://127.0.0.1:3318/pm?useUnicode=true&characterEncoding=UTF-8&noAccessToProcedureBodies=true
-jdbc.url=jdbc:mysql://127.0.0.1:3306/pm?useUnicode=true&characterEncoding=UTF-8&noAccessToProcedureBodies=true
+jdbc.url=jdbc:mysql://127.0.0.1:3306/pm20190320?useUnicode=true&characterEncoding=UTF-8&noAccessToProcedureBodies=true
 
 jdbc.username=root
 jdbc.password=root
