--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -12,8 +12,8 @@ jdbcType=mysql
 #jdbc.driver=com.p6spy.engine.spy.P6SpyDriver
 jdbc.driver=com.mysql.jdbc.Driver
 #\u670D\u52A1\u5668\u4E0A\u7684\u7AEF\u53E3\u4E3A3318
-#jdbc.url=jdbc:mysql://127.0.0.1:3318/pm?useUnicode=true&characterEncoding=UTF-8&noAccessToProcedureBodies=true
-jdbc.url=jdbc:mysql://127.0.0.1:3306/pm20190320?useUnicode=true&characterEncoding=UTF-8&noAccessToProcedureBodies=true
+jdbc.url=jdbc:mysql://127.0.0.1:3318/pm?useUnicode=true&characterEncoding=UTF-8&noAccessToProcedureBodies=true
+#jdbc.url=jdbc:mysql://127.0.0.1:3306/pm20190320?useUnicode=true&characterEncoding=UTF-8&noAccessToProcedureBodies=true
 
 jdbc.username=root
 jdbc.password=root
